ai/agentgateway/agentgateway-proxy.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentgateway-proxy
  namespace: agentgateway-system
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
        kinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: agentgateway.dev
          kind: AgentgatewayModel
